fikset feil i url i mal

--- a/static/de_ru_png.html
+++ b/static/de_ru_png.html
@@ -10,6 +10,6 @@
   </head>
   
   <body>
-    <img id="de_ru" src="http://lar.local/weather_info/de_ru.png" />
+    <img id="de_ru" src="/weather_info/de_ru.png" />
   </body>
 </html>
